--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <h1>This is a Heading</h1>
+    <p>This is a Paragraph</p>
     <a href="www.jleitao.eu/pageshield">Page Shield</a>
 </body>
 </html>
