--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,6 @@
 <body>
     <h1>This is a Heading</h1>
     <p>This is a Paragraph</p>
-    <a href="www.jleitao.eu/pageshield">Page Shield</a>
+    <a href="/pageshield">Page Shield</a>
 </body>
 </html>
