Added Malicious Script

--- a/html/pageshield.html
+++ b/html/pageshield.html
@@ -6,5 +6,6 @@
     <button type="button" onclick="myFunction()">Try it</button>
     <p>(myFunction is stored in an external file called "myScript.js")</p>
     <script src="https://www.w3schools.com/js/myScript.js"></script>
+    <script src="https://examples.page-shield.workers.dev/0001.js"></script>
 </body>
 </html>
